--- a/examples/example_observability_ekf.ipynb
+++ b/examples/example_observability_ekf.ipynb
@@ -39,7 +39,10 @@
     "from model.drone_model_kinematic import DroneSimulator\n",
     "from utils import util\n",
     "from utils import consensus\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
@@ -641,7 +644,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f57e1e8cb50>]"
+       "[<matplotlib.lines.Line2D at 0x7f177bd5ba00>]"
       ]
      },
      "execution_count": 10,
@@ -1293,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "f4ffe7adf988e0f4",
    "metadata": {
     "ExecuteTime": {
@@ -1312,7 +1315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "110225a0bcecd122",
    "metadata": {
     "ExecuteTime": {
@@ -1332,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "1df6e57bfdad8ebd",
    "metadata": {
     "ExecuteTime": {
@@ -1347,7 +1350,7 @@
        "('z', 'v_x', 'v_y', 'psi', 'w_x', 'w_y', 'w_x_dot', 'w_y_dot')"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1358,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "42ba356fbb1679c4",
    "metadata": {
     "ExecuteTime": {
@@ -1396,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "2e084a4128c76349",
    "metadata": {
     "ExecuteTime": {
@@ -1421,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "id": "a6396cb10920c927",
    "metadata": {
     "ExecuteTime": {
@@ -1469,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "id": "d7d1e9596b7c1aa5",
    "metadata": {
     "ExecuteTime": {
@@ -1523,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 28,
    "id": "e57d339072b18b70",
    "metadata": {
     "ExecuteTime": {
@@ -1560,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 29,
    "id": "6c943833962f6dad",
    "metadata": {
     "ExecuteTime": {
@@ -1597,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "b6e1456c676b40bc",
    "metadata": {
     "ExecuteTime": {
@@ -1640,7 +1643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 31,
    "id": "8b4b5426aafebd01",
    "metadata": {
     "ExecuteTime": {
@@ -1690,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 32,
    "id": "1489d05f3103c727",
    "metadata": {
     "ExecuteTime": {
@@ -1746,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 33,
    "id": "79067d50e193e8f",
    "metadata": {
     "ExecuteTime": {
@@ -1780,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 34,
    "id": "a479789f74d1d16",
    "metadata": {
     "ExecuteTime": {
@@ -1804,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
    "id": "96e507cb8ec846db",
    "metadata": {
     "ExecuteTime": {
@@ -1829,7 +1832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 36,
    "id": "94c972c8cc047985",
    "metadata": {
     "ExecuteTime": {
@@ -1862,7 +1865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 37,
    "id": "496b5186",
    "metadata": {},
    "outputs": [
@@ -1880,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 38,
    "id": "6d78596d12eb68f0",
    "metadata": {
     "ExecuteTime": {
@@ -1890,16 +1893,17 @@
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "too many indices for array: array is 0-dimensional, but 1 were indexed",
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object does not support item assignment",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[86], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(EKFs)):\n\u001b[1;32m     12\u001b[0m     EKF \u001b[38;5;241m=\u001b[39m EKFs[i]\n\u001b[0;32m---> 13\u001b[0m     x_est, x_cov, r_cov, y_noise \u001b[38;5;241m=\u001b[39m \u001b[43mEKF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_ekf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx0_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu_ekf_noise_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_ekf_noise_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     14\u001b[0m \u001b[43m                                               \u001b[49m\u001b[43mP_init\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mP0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     15\u001b[0m \u001b[43m                                               \u001b[49m\u001b[43mQ_init\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mQ0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[43m                                               \u001b[49m\u001b[43mR_sim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mR0_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     17\u001b[0m     x_est_all\u001b[38;5;241m.\u001b[39mappend(x_est)\n\u001b[1;32m     18\u001b[0m     x_cov_all\u001b[38;5;241m.\u001b[39mappend(x_cov)\n",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[38], line 23\u001b[0m\n\u001b[1;32m     21\u001b[0m i \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     22\u001b[0m EKF \u001b[38;5;241m=\u001b[39m EKFs[i]\n\u001b[0;32m---> 23\u001b[0m x_est, x_cov, r_cov, y_noise \u001b[38;5;241m=\u001b[39m \u001b[43mEKF\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrun_ekf\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx0_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu_ekf_noise_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_ekf_noise_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     24\u001b[0m \u001b[43m                                            \u001b[49m\u001b[43mP_init\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mP0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     25\u001b[0m \u001b[43m                                            \u001b[49m\u001b[43mQ_init\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mQ0\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[43m                                            \u001b[49m\u001b[43mR_sim\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mR0_all\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     27\u001b[0m x_est_all\u001b[38;5;241m.\u001b[39mappend(x_est)\n\u001b[1;32m     28\u001b[0m x_cov_all\u001b[38;5;241m.\u001b[39mappend(x_cov)\n",
       "File \u001b[0;32m~/repos/conSensus/examples/../model/drone_ekf.py:175\u001b[0m, in \u001b[0;36mDroneEKF.run_ekf\u001b[0;34m(self, x0, u_sim, y_sim, P_init, Q_init, R_sim)\u001b[0m\n\u001b[1;32m    172\u001b[0m     z \u001b[38;5;241m=\u001b[39m y_sim\u001b[38;5;241m.\u001b[39mvalues[k, :]\n\u001b[1;32m    174\u001b[0m     \u001b[38;5;66;03m# Update\u001b[39;00m\n\u001b[0;32m--> 175\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mekf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupdate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mz\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mR\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mR_list\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    177\u001b[0m \u001b[38;5;66;03m# State estimate\u001b[39;00m\n\u001b[1;32m    178\u001b[0m x_est \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame(np\u001b[38;5;241m.\u001b[39mvstack(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mekf\u001b[38;5;241m.\u001b[39mhistory[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mX\u001b[39m\u001b[38;5;124m'\u001b[39m]), columns\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate_names)\n",
-      "File \u001b[0;32m~/repos/conSensus/examples/../model/extended_kalman_filter.py:135\u001b[0m, in \u001b[0;36mEKF.update\u001b[0;34m(self, z, R)\u001b[0m\n\u001b[1;32m    131\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mp):\n\u001b[1;32m    132\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircular_measurements[j]:  \u001b[38;5;66;03m# circular measurement\u001b[39;00m\n\u001b[1;32m    133\u001b[0m         \u001b[38;5;66;03m# y[j] = angle_difference(z[j], z_pred[j])\u001b[39;00m\n\u001b[1;32m    134\u001b[0m         \u001b[38;5;66;03m# y[j] = angle_difference(self.z[j], z_pred[j])\u001b[39;00m\n\u001b[0;32m--> 135\u001b[0m         y[j] \u001b[38;5;241m=\u001b[39m util\u001b[38;5;241m.\u001b[39mwrapToPi(np\u001b[38;5;241m.\u001b[39marray(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mz[j] \u001b[38;5;241m-\u001b[39m \u001b[43mz_pred\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m))\n\u001b[1;32m    136\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:  \u001b[38;5;66;03m# non-circular measurement\u001b[39;00m\n\u001b[1;32m    137\u001b[0m         y[j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mz[j] \u001b[38;5;241m-\u001b[39m z_pred[j]\n",
-      "\u001b[0;31mIndexError\u001b[0m: too many indices for array: array is 0-dimensional, but 1 were indexed"
+      "File \u001b[0;32m~/repos/conSensus/examples/../model/extended_kalman_filter.py:189\u001b[0m, in \u001b[0;36mEKF.update\u001b[0;34m(self, z, R)\u001b[0m\n\u001b[1;32m    187\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mp):\n\u001b[1;32m    188\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcircular_measurements[j]:\n\u001b[0;32m--> 189\u001b[0m         y[j] \u001b[38;5;241m=\u001b[39m \u001b[43mutil\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwrapToPi\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mz\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mz_pred\u001b[49m\u001b[43m[\u001b[49m\u001b[43mj\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    190\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m    191\u001b[0m         y[j] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mz[j] \u001b[38;5;241m-\u001b[39m z_pred[j]\n",
+      "File \u001b[0;32m~/repos/conSensus/examples/../utils/util.py:8\u001b[0m, in \u001b[0;36mwrapToPi\u001b[0;34m(rad)\u001b[0m\n\u001b[1;32m      6\u001b[0m rad_wrap \u001b[38;5;241m=\u001b[39m copy\u001b[38;5;241m.\u001b[39mcopy(rad)\n\u001b[1;32m      7\u001b[0m q \u001b[38;5;241m=\u001b[39m (rad_wrap \u001b[38;5;241m<\u001b[39m \u001b[38;5;241m-\u001b[39mnp\u001b[38;5;241m.\u001b[39mpi) \u001b[38;5;241m|\u001b[39m (np\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m<\u001b[39m rad_wrap)\n\u001b[0;32m----> 8\u001b[0m \u001b[43mrad_wrap\u001b[49m\u001b[43m[\u001b[49m\u001b[43mq\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m ((rad_wrap[q] \u001b[38;5;241m+\u001b[39m np\u001b[38;5;241m.\u001b[39mpi) \u001b[38;5;241m%\u001b[39m (\u001b[38;5;241m2\u001b[39m \u001b[38;5;241m*\u001b[39m np\u001b[38;5;241m.\u001b[39mpi)) \u001b[38;5;241m-\u001b[39m np\u001b[38;5;241m.\u001b[39mpi\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m rad_wrap\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object does not support item assignment"
      ]
     }
    ],
@@ -1914,16 +1918,26 @@
     "r_cov_all = []\n",
     "y_noise_all = []\n",
     "\n",
-    "for i in range(len(EKFs)):\n",
-    "    EKF = EKFs[i]\n",
-    "    x_est, x_cov, r_cov, y_noise = EKF.run_ekf(x0_all[i], u_ekf_noise_all[i], y_ekf_noise_all[i],\n",
-    "                                               P_init=P0,\n",
-    "                                               Q_init=Q0,\n",
-    "                                               R_sim=R0_all[i])\n",
-    "    x_est_all.append(x_est)\n",
-    "    x_cov_all.append(x_cov)\n",
-    "    r_cov_all.append(r_cov)\n",
-    "    y_noise_all.append(y_noise)"
+    "# for i in range(len(EKFs)):\n",
+    "#     EKF = EKFs[i]\n",
+    "#     x_est, x_cov, r_cov, y_noise = EKF.run_ekf(x0_all[i], u_ekf_noise_all[i], y_ekf_noise_all[i],\n",
+    "#                                                P_init=P0,\n",
+    "#                                                Q_init=Q0,\n",
+    "#                                                R_sim=R0_all[i])\n",
+    "#     x_est_all.append(x_est)\n",
+    "#     x_cov_all.append(x_cov)\n",
+    "#     r_cov_all.append(r_cov)\n",
+    "#     y_noise_all.append(y_noise)\n",
+    "i = 0\n",
+    "EKF = EKFs[i]\n",
+    "x_est, x_cov, r_cov, y_noise = EKF.run_ekf(x0_all[i], u_ekf_noise_all[i], y_ekf_noise_all[i],\n",
+    "                                            P_init=P0,\n",
+    "                                            Q_init=Q0,\n",
+    "                                            R_sim=R0_all[i])\n",
+    "x_est_all.append(x_est)\n",
+    "x_cov_all.append(x_cov)\n",
+    "r_cov_all.append(r_cov)\n",
+    "y_noise_all.append(y_noise)"
    ]
   },
   {
