--- a/examples/example_observability_ekf.ipynb
+++ b/examples/example_observability_ekf.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:46.753415Z",
-     "start_time": "2025-08-07T00:22:46.035699Z"
+     "end_time": "2025-08-12T19:28:24.757029Z",
+     "start_time": "2025-08-12T19:28:20.984279Z"
     }
    },
    "source": [
@@ -26,15 +26,17 @@
    ],
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
+      "C:\\Users\\bcell\\anaconda3\\envs\\tf-main\\lib\\site-packages\\do_mpc\\sysid\\__init__.py:15: UserWarning: The ONNX feature is not available. Please install the full version of do-mpc to access this feature.\n",
+      "  warnings.warn('The ONNX feature is not available. Please install the full version of do-mpc to access this feature.')\n",
+      "C:\\Users\\bcell\\anaconda3\\envs\\tf-main\\lib\\site-packages\\do_mpc\\opcua\\__init__.py:14: UserWarning: The opcua feature is not available. Please install the full version of do-mpc to access this feature.\n",
+      "  warnings.warn('The opcua feature is not available. Please install the full version of do-mpc to access this feature.')\n"
      ]
     }
    ],
-   "execution_count": 1149
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -45,8 +47,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:46.873920Z",
-     "start_time": "2025-08-07T00:22:46.767883Z"
+     "end_time": "2025-08-12T19:28:26.149842Z",
+     "start_time": "2025-08-12T19:28:24.862674Z"
     }
    },
    "cell_type": "code",
@@ -59,13 +61,13 @@
    ],
    "id": "f55b086e39903ec1",
    "outputs": [],
-   "execution_count": 1150
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:47.093287Z",
-     "start_time": "2025-08-07T00:22:46.954312Z"
+     "end_time": "2025-08-12T19:28:27.323530Z",
+     "start_time": "2025-08-12T19:28:27.224267Z"
     }
    },
    "cell_type": "code",
@@ -81,13 +83,13 @@
    ],
    "id": "bfa5a59260dbe3f0",
    "outputs": [],
-   "execution_count": 1151
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:47.318291Z",
-     "start_time": "2025-08-07T00:22:47.183142Z"
+     "end_time": "2025-08-12T19:28:27.518931Z",
+     "start_time": "2025-08-12T19:28:27.382908Z"
     }
    },
    "cell_type": "code",
@@ -120,13 +122,13 @@
    ],
    "id": "9b06c927a0d893b2",
    "outputs": [],
-   "execution_count": 1152
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:47.490620Z",
-     "start_time": "2025-08-07T00:22:47.373867Z"
+     "end_time": "2025-08-12T19:28:27.711977Z",
+     "start_time": "2025-08-12T19:28:27.592859Z"
     }
    },
    "cell_type": "code",
@@ -163,7 +165,7 @@
    ],
    "id": "18cccb298568ffa6",
    "outputs": [],
-   "execution_count": 1153
+   "execution_count": 5
   },
   {
    "metadata": {},
@@ -174,8 +176,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:47.718017Z",
-     "start_time": "2025-08-07T00:22:47.574032Z"
+     "end_time": "2025-08-12T19:28:27.880268Z",
+     "start_time": "2025-08-12T19:28:27.761996Z"
     }
    },
    "cell_type": "code",
@@ -186,13 +188,13 @@
    ],
    "id": "548f3238c581d87a",
    "outputs": [],
-   "execution_count": 1154
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:51.002260Z",
-     "start_time": "2025-08-07T00:22:47.764279Z"
+     "end_time": "2025-08-12T19:28:31.437873Z",
+     "start_time": "2025-08-12T19:28:27.921719Z"
     }
    },
    "cell_type": "code",
@@ -211,13 +213,13 @@
    ],
    "id": "ecf8d2b9f47a0eba",
    "outputs": [],
-   "execution_count": 1155
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:51.197712Z",
-     "start_time": "2025-08-07T00:22:51.068880Z"
+     "end_time": "2025-08-12T19:28:31.702080Z",
+     "start_time": "2025-08-12T19:28:31.517921Z"
     }
    },
    "cell_type": "code",
@@ -584,18 +586,18 @@
        "</div>"
       ]
      },
-     "execution_count": 1156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1156
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:51.509606Z",
-     "start_time": "2025-08-07T00:22:51.344010Z"
+     "end_time": "2025-08-12T19:28:32.058787Z",
+     "start_time": "2025-08-12T19:28:31.855150Z"
     }
    },
    "cell_type": "code",
@@ -613,13 +615,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1157
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:51.918107Z",
-     "start_time": "2025-08-07T00:22:51.645266Z"
+     "end_time": "2025-08-12T19:28:32.451831Z",
+     "start_time": "2025-08-12T19:28:32.237829Z"
     }
    },
    "cell_type": "code",
@@ -633,10 +635,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x15a86b5a3d0>]"
+       "[<matplotlib.lines.Line2D at 0x1ee6b7b04f0>]"
       ]
      },
-     "execution_count": 1158,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -651,7 +653,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1158
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -662,21 +664,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:22:52.283184Z",
-     "start_time": "2025-08-07T00:22:52.184059Z"
+     "end_time": "2025-08-12T19:28:32.747418Z",
+     "start_time": "2025-08-12T19:28:32.656258Z"
     }
    },
    "cell_type": "code",
    "source": "win = 5  # window size, set to None to use entire time-series as one window",
    "id": "87e6e40b2270375f",
    "outputs": [],
-   "execution_count": 1159
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:07.512127Z",
-     "start_time": "2025-08-07T00:22:52.384268Z"
+     "end_time": "2025-08-12T19:28:48.643542Z",
+     "start_time": "2025-08-12T19:28:32.834186Z"
     }
    },
    "cell_type": "code",
@@ -689,13 +691,13 @@
    ],
    "id": "f517ba9d69962c10",
    "outputs": [],
-   "execution_count": 1160
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:07.724127Z",
-     "start_time": "2025-08-07T00:23:07.610149Z"
+     "end_time": "2025-08-12T19:28:48.862188Z",
+     "start_time": "2025-08-12T19:28:48.724681Z"
     }
    },
    "cell_type": "code",
@@ -715,13 +717,13 @@
      ]
     }
    ],
-   "execution_count": 1161
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:07.991344Z",
-     "start_time": "2025-08-07T00:23:07.833972Z"
+     "end_time": "2025-08-12T19:28:49.043555Z",
+     "start_time": "2025-08-12T19:28:48.932749Z"
     }
    },
    "cell_type": "code",
@@ -994,18 +996,18 @@
        "</div>"
       ]
      },
-     "execution_count": 1162,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1162
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:10.553440Z",
-     "start_time": "2025-08-07T00:23:08.187313Z"
+     "end_time": "2025-08-12T19:28:51.430787Z",
+     "start_time": "2025-08-12T19:28:49.122848Z"
     }
    },
    "cell_type": "code",
@@ -1036,7 +1038,7 @@
    ],
    "id": "362937603ba818f2",
    "outputs": [],
-   "execution_count": 1163
+   "execution_count": 15
   },
   {
    "metadata": {},
@@ -1047,8 +1049,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:11.211881Z",
-     "start_time": "2025-08-07T00:23:10.691613Z"
+     "end_time": "2025-08-12T19:28:52.180106Z",
+     "start_time": "2025-08-12T19:28:51.584335Z"
     }
    },
    "cell_type": "code",
@@ -1071,7 +1073,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1164
+   "execution_count": 16
   },
   {
    "metadata": {},
@@ -1082,8 +1084,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:11.529290Z",
-     "start_time": "2025-08-07T00:23:11.318371Z"
+     "end_time": "2025-08-12T19:28:52.454825Z",
+     "start_time": "2025-08-12T19:28:52.269764Z"
     }
    },
    "cell_type": "code",
@@ -1115,7 +1117,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1165
+   "execution_count": 17
   },
   {
    "metadata": {},
@@ -1126,21 +1128,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:11.692029Z",
-     "start_time": "2025-08-07T00:23:11.595732Z"
+     "end_time": "2025-08-12T19:28:52.664669Z",
+     "start_time": "2025-08-12T19:28:52.535868Z"
     }
    },
    "cell_type": "code",
    "source": "from drone_ekf import DroneEKF",
    "id": "87adcf3fef10daef",
    "outputs": [],
-   "execution_count": 1166
+   "execution_count": 18
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:11.839188Z",
-     "start_time": "2025-08-07T00:23:11.748647Z"
+     "end_time": "2025-08-12T19:28:52.813212Z",
+     "start_time": "2025-08-12T19:28:52.713976Z"
     }
    },
    "cell_type": "code",
@@ -1157,18 +1159,18 @@
        "['psi', 'r_x', 'r_y', 'a_x', 'a_y']"
       ]
      },
-     "execution_count": 1167,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1167
+   "execution_count": 19
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:12.038320Z",
-     "start_time": "2025-08-07T00:23:11.926605Z"
+     "end_time": "2025-08-12T19:28:52.971405Z",
+     "start_time": "2025-08-12T19:28:52.878596Z"
     }
    },
    "cell_type": "code",
@@ -1178,13 +1180,13 @@
    ],
    "id": "f4ffe7adf988e0f4",
    "outputs": [],
-   "execution_count": 1168
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:12.217066Z",
-     "start_time": "2025-08-07T00:23:12.103984Z"
+     "end_time": "2025-08-12T19:28:53.158148Z",
+     "start_time": "2025-08-12T19:28:53.038575Z"
     }
    },
    "cell_type": "code",
@@ -1198,13 +1200,13 @@
    ],
    "id": "110225a0bcecd122",
    "outputs": [],
-   "execution_count": 1169
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:12.413359Z",
-     "start_time": "2025-08-07T00:23:12.296831Z"
+     "end_time": "2025-08-12T19:28:53.306640Z",
+     "start_time": "2025-08-12T19:28:53.192998Z"
     }
    },
    "cell_type": "code",
@@ -1217,18 +1219,18 @@
        "('z', 'v_x', 'v_y', 'psi', 'w_x', 'w_y', 'w_x_dot', 'w_y_dot')"
       ]
      },
-     "execution_count": 1170,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1170
+   "execution_count": 22
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:12.575781Z",
-     "start_time": "2025-08-07T00:23:12.474346Z"
+     "end_time": "2025-08-12T19:28:53.482837Z",
+     "start_time": "2025-08-12T19:28:53.368368Z"
     }
    },
    "cell_type": "code",
@@ -1240,7 +1242,7 @@
    ],
    "id": "42ba356fbb1679c4",
    "outputs": [],
-   "execution_count": 1171
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -1256,21 +1258,21 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:12.908096Z",
-     "start_time": "2025-08-07T00:23:12.635774Z"
+     "end_time": "2025-08-12T19:28:53.857503Z",
+     "start_time": "2025-08-12T19:28:53.562528Z"
     }
    },
    "cell_type": "code",
    "source": "t_sim_ekf, x_sim_ekf, u_sim_ekf, y_sim_ekf = EKF.simulate(x_ekf, u_ekf)",
    "id": "2e084a4128c76349",
    "outputs": [],
-   "execution_count": 1172
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:13.953128Z",
-     "start_time": "2025-08-07T00:23:12.974211Z"
+     "end_time": "2025-08-12T19:28:54.902422Z",
+     "start_time": "2025-08-12T19:28:53.915128Z"
     }
    },
    "cell_type": "code",
@@ -1310,13 +1312,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1173
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:14.628469Z",
-     "start_time": "2025-08-07T00:23:14.048206Z"
+     "end_time": "2025-08-12T19:28:55.595744Z",
+     "start_time": "2025-08-12T19:28:54.997673Z"
     }
    },
    "cell_type": "code",
@@ -1356,7 +1358,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1174
+   "execution_count": 26
   },
   {
    "metadata": {},
@@ -1367,8 +1369,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:14.819093Z",
-     "start_time": "2025-08-07T00:23:14.708887Z"
+     "end_time": "2025-08-12T19:28:55.812539Z",
+     "start_time": "2025-08-12T19:28:55.706834Z"
     }
    },
    "cell_type": "code",
@@ -1399,13 +1401,13 @@
    ],
    "id": "e57d339072b18b70",
    "outputs": [],
-   "execution_count": 1175
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:15.018585Z",
-     "start_time": "2025-08-07T00:23:14.901743Z"
+     "end_time": "2025-08-12T19:28:55.998610Z",
+     "start_time": "2025-08-12T19:28:55.887586Z"
     }
    },
    "cell_type": "code",
@@ -1428,13 +1430,13 @@
    ],
    "id": "6c943833962f6dad",
    "outputs": [],
-   "execution_count": 1176
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:15.260438Z",
-     "start_time": "2025-08-07T00:23:15.099515Z"
+     "end_time": "2025-08-12T19:28:56.207405Z",
+     "start_time": "2025-08-12T19:28:56.074154Z"
     }
    },
    "cell_type": "code",
@@ -1464,13 +1466,13 @@
    ],
    "id": "b6e1456c676b40bc",
    "outputs": [],
-   "execution_count": 1177
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:15.909162Z",
-     "start_time": "2025-08-07T00:23:15.314155Z"
+     "end_time": "2025-08-12T19:28:56.921760Z",
+     "start_time": "2025-08-12T19:28:56.267100Z"
     }
    },
    "cell_type": "code",
@@ -1478,7 +1480,7 @@
     "# Plot noisy measurements\n",
     "n_col = EKF.p\n",
     "n_row = int(np.ceil(EKF.p/n_col))\n",
-    "fig, ax = plt.subplots(nrows=n_row, ncols=n_col, figsize=(3.0*n_col, 2.0*n_row))\n",
+    "fig, ax = plt.subplots(nrows=n_row, ncols=n_col, figsize=(3.0*n_col, 2.0*n_row), squeeze=False)\n",
     "for i, x in enumerate(y_ekf.keys()):\n",
     "    ax.flat[i].set_title(x)\n",
     "    ax.flat[i].plot(t_sim, sim_data[x].values, label='simulation', color='black')\n",
@@ -1505,13 +1507,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1178
+   "execution_count": 30
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:16.393457Z",
-     "start_time": "2025-08-07T00:23:16.013521Z"
+     "end_time": "2025-08-12T19:28:57.482101Z",
+     "start_time": "2025-08-12T19:28:56.994344Z"
     }
    },
    "cell_type": "code",
@@ -1546,7 +1548,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1179
+   "execution_count": 31
   },
   {
    "metadata": {},
@@ -1557,8 +1559,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:16.618996Z",
-     "start_time": "2025-08-07T00:23:16.495673Z"
+     "end_time": "2025-08-12T19:28:57.742073Z",
+     "start_time": "2025-08-12T19:28:57.572972Z"
     }
    },
    "cell_type": "code",
@@ -1576,13 +1578,13 @@
    ],
    "id": "79067d50e193e8f",
    "outputs": [],
-   "execution_count": 1180
+   "execution_count": 32
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:16.797205Z",
-     "start_time": "2025-08-07T00:23:16.695785Z"
+     "end_time": "2025-08-12T19:28:57.957605Z",
+     "start_time": "2025-08-12T19:28:57.822755Z"
     }
    },
    "cell_type": "code",
@@ -1600,13 +1602,13 @@
    ],
    "id": "a479789f74d1d16",
    "outputs": [],
-   "execution_count": 1181
+   "execution_count": 33
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:17.002810Z",
-     "start_time": "2025-08-07T00:23:16.873845Z"
+     "end_time": "2025-08-12T19:28:58.165903Z",
+     "start_time": "2025-08-12T19:28:58.038699Z"
     }
    },
    "cell_type": "code",
@@ -1625,13 +1627,13 @@
    ],
    "id": "96e507cb8ec846db",
    "outputs": [],
-   "execution_count": 1182
+   "execution_count": 34
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:17.192809Z",
-     "start_time": "2025-08-07T00:23:17.053895Z"
+     "end_time": "2025-08-12T19:28:58.340354Z",
+     "start_time": "2025-08-12T19:28:58.232973Z"
     }
    },
    "cell_type": "code",
@@ -1655,13 +1657,13 @@
    ],
    "id": "94c972c8cc047985",
    "outputs": [],
-   "execution_count": 1183
+   "execution_count": 35
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:20.461579Z",
-     "start_time": "2025-08-07T00:23:17.244213Z"
+     "end_time": "2025-08-12T19:29:01.822795Z",
+     "start_time": "2025-08-12T19:28:58.414484Z"
     }
    },
    "cell_type": "code",
@@ -1674,13 +1676,13 @@
    ],
    "id": "6d78596d12eb68f0",
    "outputs": [],
-   "execution_count": 1184
+   "execution_count": 36
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:21.901468Z",
-     "start_time": "2025-08-07T00:23:20.535515Z"
+     "end_time": "2025-08-12T19:29:02.969581Z",
+     "start_time": "2025-08-12T19:29:01.892563Z"
     }
    },
    "cell_type": "code",
@@ -1714,13 +1716,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 1185
+   "execution_count": 37
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-08-07T00:23:21.982798Z",
-     "start_time": "2025-08-07T00:23:21.967214Z"
+     "end_time": "2025-08-12T19:29:03.106465Z",
+     "start_time": "2025-08-12T19:29:03.092862Z"
     }
    },
    "cell_type": "code",
